--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -315,7 +315,7 @@ body{
 
         function make_user_response_row(score, responses){
             if(score != null){
-            return '<tr class="response-table"><td class="response-table" style="border-right: 1px dotted !important;">Small, black, white stripes?<br>' + rc2s(responses.q1_response) + '</td><td class="response-table" style="border-right: 1px dotten !important;">Stripe on head + thorax?<br>' + rc2s(responses.q2_response) + '</td><td class="response-table">Stripes on abdomen and legs?<br>' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
+            return '<tr class="response-table"><td class="response-table" style="border-right: 1px dotted !important;">Small, black, white stripes?<br>' + rc2s(responses.q1_response) + '</td><td class="response-table" style="border-right: 1px dotted !important;">Stripe on head + thorax?<br>' + rc2s(responses.q2_response) + '</td><td class="response-table">Stripes on abdomen and legs?<br>' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
             }else{
                 return '';
             }
