--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -315,7 +315,7 @@ body{
 
         function make_user_response_row(score, responses){
             if(score != null){
-            return '<tr><td><table class="response-table"><tr class="response-table"><td class="response-table" style="border-right: 1px dotted !important;">Small, black, white stripes?<br><span style="font-size:larger;">' + rc2s(responses.q1_response) + '</span></td><td class="response-table" style="border-right: 1px dotted !important;">Stripe on head and thorax?<br><span style="font-size:larger;"' + rc2s(responses.q2_response) + '</td><td class="response-table">Stripes on abdomen and legs?<br><span style="font-size: larger;">' + rc2s(responses.q3_response) + '</span></td></tr></table></td></tr>';
+            return '<tr><td><table class="response-table"><tr class="response-table"><td class="response-table" style="border-right: 1px dotted !important;">Small, black, white stripes?<br><span style="font-size:larger;">' + rc2s(responses.q1_response) + '</span></td><td class="response-table" style="border-right: 1px dotted !important;">Stripe on head and thorax?<br><span style="font-size:larger;"' + rc2s(responses.q2_response) + '</span></td><td class="response-table">Stripes on abdomen and legs?<br><span style="font-size: larger;">' + rc2s(responses.q3_response) + '</span></td></tr></table></td></tr>';
             }else{
                 return '';
             }
